--- a/views/home.html
+++ b/views/home.html
@@ -41,7 +41,7 @@
 
         <section class="section-1">
 
-            <img src="/images/foto1.png" alt="cv">
+            <img src="/images/home1.png" alt="cv">
             <div class="description-1">
                 <h3>CREA TU CURRICULUM ONLINE</h3>
                 <p>Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, 
@@ -55,12 +55,13 @@
         </section>
 
         <section class="section-2">
-
-            <h3>POTENCIAMOS TU CV</h3>
-            <p>Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, 
-                sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. 
-                Neque porro quisquam est, qui dolorem.</p>
-            <img src="/images/business-leader-standing-arrow-holding-flag-flat-vector-illustration-cartoon-people-training-doing-business-plan-leadership-victory-challenge-concept_74855-9812.jpg" alt="">
+            <div class="description-2">
+                <h3>POTENCIAMOS TU CV</h3>
+                <p>Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, 
+                    sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. 
+                    Neque porro quisquam est, qui dolorem.</p>
+            </div>
+            <img src="/images/potenciar.png" alt="">
         </section>
 
         <section class="section-3">
