--- a/views/creatucv.html
+++ b/views/creatucv.html
@@ -20,8 +20,8 @@
                 <ul>
                     <li><a href = "/" >Home</a></li>
                     <li><a href = "/creatucv" >Crea tu CV</a></li>
-                    <li><a href = "" >Sobre Nosotros</a></li>
-                    <li><a href = "" >Contacto</a></li>
+                    <li><a href = "/sobrenosotros" >Sobre Nosotros</a></li>
+                    <li><a href = "/contacto" >Contacto</a></li>
                     <br>
                     <li class="ingresar"><a href = "/login" >Ingresar</a></li>
                     <li class="registrarse"><a href = "/registrarse" >Registrarse</a></li>
