--- a/views/contacto.html
+++ b/views/contacto.html
@@ -32,7 +32,6 @@
                 <i class="fas fa-bars burger-bars"></i>
             </div>
         </section>
-
     </header>
     <main>
         <section class="contacto">
@@ -80,8 +79,16 @@
     </main>
     <footer>
         
-        <div>
+        <div class="section-redes">
             <p>REDES</p>
+            <div class="redes-img">
+                <img src="/images/tw.png" alt="">
+                <img src="/images/insta.png" alt="">
+                <img src="/images/linkedin.png" alt="">
+                <img src="/images/facebook.png" alt="">
+                <img src="/images/reddir.png" alt="">
+
+            </div>
         </div>
 
     </footer>
