--- a/views/creatucv.html
+++ b/views/creatucv.html
@@ -153,8 +153,16 @@
     </main>
 
     <footer>
-        <div>
+        <div class="section-redes">
             <p>REDES</p>
+            <div class="redes-img">
+                <img src="/images/tw.png" alt="">
+                <img src="/images/insta.png" alt="">
+                <img src="/images/linkedin.png" alt="">
+                <img src="/images/facebook.png" alt="">
+                <img src="/images/reddir.png" alt="">
+
+            </div>
         </div>
     </footer>
 
