--- a/src/views/home.ejs
+++ b/src/views/home.ejs
@@ -44,9 +44,8 @@
             <img src="/images/home1.png" alt="cv">
             <div class="description-1">
                 <h3>CREA TU CURRICULUM ONLINE</h3>
-                <p>Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, 
-                sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. 
-                Neque porro quisquam est, qui dolorem.</p>
+                <p>¿No tienes curriculum? ¿No sabes qué poner o cómo hacerlo? No te preocupes, nosotros te ayudamos. 
+                ¡Vas a conseguir el trabajo de tus sueños!</p>
                 <div  class="boton">
                     <button type="submit">CREA TU CV</button>
                 </div>
@@ -70,18 +69,15 @@
             <div class="pasos">
                 <div class="paso-1">
                     <p class="numero-1">1</p>
-                    <p>Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, 
-                    sed quia consequuntur magni.</p>
+                    <p>Selecciona tu plan favorito y disfruta de los beneficios</p>
                 </div>
                 <div class="paso-2">
                     <p class="numero-2">2</p>
-                    <p>Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, 
-                    sed quia consequuntur magni.</p>
+                    <p>Completa la plantilla con tus datos y personalízala hasta obtener el currículum perfecto </p>
                 </div>
                 <div class="paso-3">
                     <p class="numero-3">3</p>
-                    <p>Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, 
-                    sed quia consequuntur magni.</p>
+                    <p>Descarga, imprime y comparte tu Curriculum Vitae. ¡Consigue el trabajo ideal!</p>
                 </div>
             </div>
 
@@ -93,7 +89,7 @@
                 <i class="fas fa-arrow-circle-left flecha"></i>
                 <div class="valoracion-1">
                     <p class="foto-valoracion">X</p>
-                    <h4>PROFESION</h4>
+                    <h4>Diseñador Grafico</h4>
                     <div class="stars">
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
@@ -101,11 +97,11 @@
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
                     </div>
-                    <p>Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit.</p>
+                    <p>Muy práctico poder organizar todos mis CVs y solicitudes en un solo lugar con Azuletta. ¡Las plantillas son preciosas!</p>
                 </div>
                 <div class="valoracion-2">
                     <p class="foto-valoracion">X</p>
-                    <h4>PROFESION</h4>
+                    <h4>Developer Web</h4>
                     <div class="stars">
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
@@ -113,11 +109,11 @@
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
                     </div>
-                    <p>Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit.</p>
+                    <p>¡Recibí comentarios muy positivos sobre mi CV! Encontré un buen trabajo bastante rápido. Definitivamente los recomendaré.</p>
                 </div>
                 <div class="valoracion-3">
                     <p class="foto-valoracion">X</p>
-                    <h4>PROFESION</h4>
+                    <h4>Marketing</h4>
                     <div class="stars">
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
@@ -125,12 +121,19 @@
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
                     </div>
-                    <p>Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit.</p>
+                    <p>"Después de hacer mil ensayos para crear un buen CV en Word me di por vencido. Un amigo me recomendó esta web y no puedo estar más feliz."</p>
                 </div> 
                 <i class="fas fa-arrow-circle-right flecha"></i>
             </div>
         </section>
 
+        <section class="section-5">
+            <p>Prueba ahora el editor de CV online de Azuletta</p>
+            <button type="submit">DA EL PRIMER PASO</button>
+        </section>
+
+    </section>
+    
     </main>
 
     <footer>
