--- a/src/views/creatucv.ejs
+++ b/src/views/creatucv.ejs
@@ -42,17 +42,16 @@
 
             <article>
                 <img src ="/images/CVSilver.png" alt="CV Silver">
-
                 <div class="titulo-silver">
                     <h2>CV Silver</h2>
                 </div>
-
-                <div class="description-silver">
-                    <h4>Diseño clásico</h4>
-                </div>
-
-                <div class="price-silver">
-                    <h5>$500</h5>
+                <div class="description-s">
+                    <div class="description-silver">
+                        <p>Diseño clásico</p>
+                    </div>
+                    <div class="price-silver">
+                        <p>$500</p>
+                    </div>
                 </div>
 
                     <div class="bottom-silver">
@@ -62,11 +61,11 @@
                 </div>
                 <div>
                     <ul>
-                        <li>FUNCION 1</li>
-                        <li class="back-funcion">FUNCION 2</li>
-                        <li>FUNCION 3</li>
-                        <li  class="back-funcion">FUNCION 4</li>
-                        <li>FUNCION 5</li>
+                        <li>Crear curriculums ilimitados.</li>
+                        <li class="back-funcion">Acesso a todas las plantillas silver</li>
+                        <li>Asesoria de profesionales.</li>
+                        <li  class="back-funcion">Entre 24-48 horas disponible para descargarlo desde su cuenta personal.</li>
+                        <li>Cuenta Azuletta durante 3 meses para crear y editar sin limites.</li>
                     </ul>
                 </div>   
             </article>
@@ -78,18 +77,16 @@
             <article>
 
             <img src ="/images/CVGold.png" alt="CV Gold">
-
-        
             <div class="titulo-gold">
                 <h1>CV Gold</h1>
             </div>
-
-            <div class="description-gold">
-                <h4>Diseño innovador</h4>
-            </div>
-
-            <div class="price-gold">
-                <h5>$1000</h5>
+            <div class="description-g">
+                <div class="description-gold">
+                    <p>Diseño innovador</p>
+                </div>
+                <div class="price-gold">
+                    <p>$1000</p>
+                </div>
             </div>
             <div class="bottom-gold">
     
@@ -98,12 +95,12 @@
             </div>
             <div>
                 <ul>
-                    <li>FUNCION 1</li>
-                    <li class="back-funcion">FUNCION 2</li>
-                    <li>FUNCION 3</li>
-                    <li  class="back-funcion">FUNCION 4</li>
-                    <li>FUNCION 5</li>
-                    <li class="back-funcion">FUNCION 6</li>
+                    <li>Crear curriculums ilimitados.</li>
+                    <li class="back-funcion">Acceso a todas las plantillas gold</li>
+                    <li>Asesoria de profesionales.</li>
+                    <li  class="back-funcion">Ofertas de trabajos coincidentes.</li>
+                    <li>Entre 24-48 horas disponible para descargarlo desde su cuenta personal.</li>
+                    <li class="back-funcion">Cuenta Azuletta durante 3 meses para crear y editar sin limites.</li>
 
                 </ul>
             </div> 
@@ -121,27 +118,27 @@
                 <div class="titulo-black">
                     <h2>CV Black</h2>
                 </div>
+                <div class= "description-b">
                     <div class="description-black">
-                    <h4>Diseño de alto impacto</h4>
+                    <p>Diseño de alto impacto</p>
                     </div>
                     <div class="price-black">
-                    <h5>$1500</h5>
+                    <p>$1500</p>
                     </div>
-                    <div class="bottom-black">
-                    
-                        <input type="submit" name="add-to-cart" value="Agregar al carrito" title="Estas a un solo click de potenciar tu CV!">
-                    
+                </div>
+                <div class="bottom-black">
+                    <input type="submit" name="add-to-cart" value="Agregar al carrito" title="Estas a un solo click de potenciar tu CV!">
                 </div>
                 <div>
                     <ul>
-                        <li>FUNCION 1</li>
-                        <li class="back-funcion">FUNCION 2</li>
-                        <li>FUNCION 3</li>
-                        <li class="back-funcion">FUNCION 4</li>
-                        <li>FUNCION 5</li>
-                        <li class="back-funcion">FUNCION 6</li>
-                        <li>FUNCION 7</li>
-                        <li class="back-funcion">FUNCION 8</li>
+                        <li>Crear curriculums ilimitados.</li>
+                        <li class="back-funcion">Acceso a todas las plantillas.</li>
+                        <li>Asesoria de profesionales.</li>
+                        <li class="back-funcion">Ofertas de trabajos coincidentes.</li>
+                        <li>Seguimiento de solicitudes de empleo.</li>
+                        <li class="back-funcion">Incluye carta de presentación personalizada.</li>
+                        <li>Entre 24-48 horas disponible para descargarlo desde su cuenta personal.</li>
+                        <li class="back-funcion">Cuenta Azuletta durante 3 meses para crear y editar sin limites.</li>
                     </ul>
                 </div> 
 
