--- a/src/views/home.ejs
+++ b/src/views/home.ejs
@@ -23,10 +23,12 @@
                     <li><a href = "/creatucv" >Crea tu CV</a></li>
                     <li><a href = "/sobrenosotros" >Sobre Nosotros</a></li>
                     <li><a href = "/contacto" >Contacto</a></li>
-                    <br>
-                    <li class="ingresar"><a href = "/login" >Ingresar</a></li>
-                    <li class="registrarse"><a href = "/registrarse" >Registarse</a></li>
-                </ul>   
+                </ul>
+                <br>
+                <div class="buttons-nav">
+                    <button><a href = "/login" >Ingresar</a></button>
+                    <button><a href = "/registrarse" >Registarse</a></button>
+                </div>   
             </nav>
             <div class="burger">
                 <i class="fas fa-bars burger-bars"></i>
@@ -133,7 +135,7 @@
         </section>
 
     </section>
-    
+
     </main>
 
     <footer>
