--- a/src/views/login.ejs
+++ b/src/views/login.ejs
@@ -17,10 +17,10 @@
            <h1>Iniciar sesión</h1>
            <form>
                 <label for="username">Usuario</label>
-                <input type="text" name="user" placeholder="Ingresa tu usuario">
+                <input type="text" name="user" placeholder="Ingresa tu usuario" required>
                 
                 <label for="password">Contraseña</label>
-                <input type="password" placeholder="Ingresa tu contraseña">
+                <input type="password" placeholder="Ingresa tu contraseña" required>
 
                 <input type="submit" value="Iniciar sesión">
 
