--- a/src/views/registrarse.ejs
+++ b/src/views/registrarse.ejs
@@ -16,23 +16,24 @@
            <img class="avatar" src="/images/azuletta_logo_header.png" alt="logo">  
            <h1>Registrarse</h1>
            <form>
+
             <label for="username">Nombre y Apellido</label>
-            <input type="text" placeholder="Ingresa tu nombre completo">
+            <input type="text" placeholder="Ingresa tu nombre completo" required>
             
             <label for="email">Email</label>
-            <input type="email" placeholder="Ingresa tu email">
+            <input type="email" placeholder="Ingresa tu email" required>
 
             <label for="password">Contraseña</label>
-            <input type="password" placeholder="Ingresa tu contraseña">
+            <input type="password" placeholder="Ingresa tu contraseña" required>
 
             <label for="password">Confirma tu contraseña</label>
-            <input type="password" placeholder="Confirma tu contraseña">
+            <input type="password" placeholder="Confirma tu contraseña" required>
 
-            
-           </form>
-           <div>
+            <div>
                 <input type="submit" value="Registrarse">
            </div>
+
+           </form>
 
             <a href="/login">Ya estás registrado?</a>
         </div>
