--- a/src/views/home.ejs
+++ b/src/views/home.ejs
@@ -49,7 +49,7 @@
                 <p>¿No tienes curriculum? ¿No sabes qué poner o cómo hacerlo? No te preocupes, nosotros te ayudamos. 
                 ¡Vas a conseguir el trabajo de tus sueños!</p>
                 <div  class="boton">
-                    <button type="submit">CREA TU CV</button>
+                    <button type="submit"><a href="/creatucv">CREA TU CV</a></button>
                 </div>
             </div>
 
@@ -131,7 +131,7 @@
 
         <section class="section-5">
             <p>Prueba ahora el editor de CV online de Azuletta</p>
-            <button type="submit">DA EL PRIMER PASO</button>
+            <button type="submit"><a href="/creatucv">DA EL PRIMER PASO</a></button>
         </section>
 
     </section>
