--- a/src/views/creatucv.ejs
+++ b/src/views/creatucv.ejs
@@ -63,8 +63,8 @@
                 </div>
                 <div>
                     <ul>
-                        <li>Crear curriculums ilimitados.</li>
-                        <li class="back-funcion">Acesso a todas las plantillas silver</li>
+                        <li>Crear 1 curriculum.</li>
+                        <li class="back-funcion">Acesso a todas las plantillas silver.</li>
                         <li>Asesoria de profesionales.</li>
                         <li  class="back-funcion">Entre 24-48 horas disponible para descargarlo desde su cuenta personal.</li>
                         <li>Cuenta Azuletta durante 3 meses para crear y editar sin limites.</li>
@@ -97,8 +97,8 @@
             </div>
             <div>
                 <ul>
-                    <li>Crear curriculums ilimitados.</li>
-                    <li class="back-funcion">Acceso a todas las plantillas gold</li>
+                    <li>Crear 1 curriculum.</li>
+                    <li class="back-funcion">Acceso a todas las plantillas gold.</li>
                     <li>Asesoria de profesionales.</li>
                     <li  class="back-funcion">Ofertas de trabajos coincidentes.</li>
                     <li>Entre 24-48 horas disponible para descargarlo desde su cuenta personal.</li>
@@ -133,8 +133,8 @@
                 </div>
                 <div>
                     <ul>
-                        <li>Crear curriculums ilimitados.</li>
-                        <li class="back-funcion">Acceso a todas las plantillas.</li>
+                        <li>Crear 1 curriculum.</li>
+                        <li class="back-funcion">Acceso a todas las plantillas black.</li>
                         <li>Asesoria de profesionales.</li>
                         <li class="back-funcion">Ofertas de trabajos coincidentes.</li>
                         <li>Seguimiento de solicitudes de empleo.</li>
